--- a/app/views/event/addOrEdit.scala.html
+++ b/app/views/event/addOrEdit.scala.html
@@ -46,11 +46,20 @@
             }
         };
 
-        $.validator.addMethod("myRequired", $.validator.methods.required, '@{Messages("event.edit.add.date.validation.required")}');
-        $.validator.addMethod("myTime", function(value, element) {
-            return this.optional(element) || /^(([0-1]?[0-9])|([2][0-3])):([0-5]?[0-9])(:([0-5]?[0-9]))?$/i.test(value);
-        }, '@{Messages("event.edit.add.date.validation.format")}');
-        $.validator.addMethod("myDateISO", $.validator.methods.dateISO, '@{Messages("event.edit.add.date.validation.format")}');
+        addValidatorMethodRequired(
+                "myRequired",
+                '@{Messages("event.edit.add.date.validation.required")}'
+        );
+        addValidatorMethodTime(
+                "myTime",
+                '@{Messages("event.edit.add.date.validation.format")}'
+        );
+
+        addValidatorMethodDateISO(
+                "myDateISO",
+                '@{Messages("event.edit.add.date.validation.format")}'
+        );
+
 
         var dateRules = {
             myRequired: true,
@@ -62,17 +71,8 @@
             myTime: true
         };
 
-        var datePickerOptions = {
-            locale: "sv",
-            minDate: "now",
-            format: "YYYY-MM-DD"
-        };
-
-        var timePickerOptions = {
-            locale: "sv",
-            stepping: 15,
-            format: "LT"
-        };
+        var datePickerOptions = getDatePickerOptions();
+        var timePickerOptions = getTimePickerOptions();
 
         $(".date input[type=date]").datetimepicker(datePickerOptions);
         $(".time input[type=time]").datetimepicker(timePickerOptions);
