--- a/app/views/event/addOrEdit.scala.html
+++ b/app/views/event/addOrEdit.scala.html
@@ -13,7 +13,7 @@
     b3.inline.fieldConstructor
 }
 @script = {
-    <script src="@routes.Assets.at("js/app/event-helpers.js")"></script>
+    <script src="@routes.Assets.versioned("js/app/event-helpers.js")"></script>
     <script>
     $(document).ready(function(){
         var form = $(".form-multistep");
