--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -12,11 +12,11 @@
 
 
 @eventScripts = {
-    <script src="@routes.Assets.at("js/libs/twitter-bootstrap-wizard-1.0.0/jquery.bootstrap.wizard.min.js")"></script>
-    <script src="@routes.Assets.at("js/app/event-helpers.js")"></script>
-    <script src="@routes.Assets.at("js/app/event-booking.js")"></script>
-    <script src="@routes.Assets.at("js/app/event-date-suggestion.js")"></script>
-    <script src="@routes.Assets.at("js/app/event-image-gallery.js")"></script>
+    <script src="@routes.Assets.versioned("js/libs/twitter-bootstrap-wizard-1.0.0/jquery.bootstrap.wizard.min.js")"></script>
+    <script src="@routes.Assets.versioned("js/app/event-helpers.js")"></script>
+    <script src="@routes.Assets.versioned("js/app/event-booking.js")"></script>
+    <script src="@routes.Assets.versioned("js/app/event-date-suggestion.js")"></script>
+    <script src="@routes.Assets.versioned("js/app/event-image-gallery.js")"></script>
 }
 
 @main(Messages("event.title", event.getName), metaData = metaData, footerScripts = eventScripts) {
