--- a/app/views/file/fileScripts.scala.html
+++ b/app/views/file/fileScripts.scala.html
@@ -1,18 +1,18 @@
         <!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
-        <script src="@routes.Assets.at("js/libs/jquery-file-upload-9.8.0/js/vendor/jquery.ui.widget.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/jquery-file-upload-9.8.0/js/vendor/jquery.ui.widget.js")"></script>
         <!-- The Load Image plugin is included for the preview images and image resizing functionality -->
-        <script src="@routes.Assets.at("js/libs/javascript-load-image-1.13.0/js/load-image.all.min.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/javascript-load-image-1.13.0/js/load-image.all.min.js")"></script>
         <!-- The Canvas to Blob plugin is included for image resizing functionality -->
-        <script src="@routes.Assets.at("js/libs/javascript-canvas-to-blob-2.1.1/js/canvas-to-blob.min.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/javascript-canvas-to-blob-2.1.1/js/canvas-to-blob.min.js")"></script>
         <!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
-        <script src="@routes.Assets.at("js/libs/jquery-file-upload-9.8.0/js/jquery.iframe-transport.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/jquery-file-upload-9.8.0/js/jquery.iframe-transport.js")"></script>
         <!-- The basic File Upload plugin -->
-        <script src="@routes.Assets.at("js/libs/jquery-file-upload-9.8.0/js/jquery.fileupload.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/jquery-file-upload-9.8.0/js/jquery.fileupload.js")"></script>
         <!-- The File Upload processing plugin -->
-        <script src="@routes.Assets.at("js/libs/jquery-file-upload-9.8.0/js/jquery.fileupload-process.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/jquery-file-upload-9.8.0/js/jquery.fileupload-process.js")"></script>
         <!-- The File Upload image preview & resize plugin -->
-        <script src="@routes.Assets.at("js/libs/jquery-file-upload-9.8.0/js/jquery.fileupload-image.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/jquery-file-upload-9.8.0/js/jquery.fileupload-image.js")"></script>
         <!-- The File Upload validation plugin -->
-        <script src="@routes.Assets.at("js/libs/jquery-file-upload-9.8.0/js/jquery.fileupload-validate.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/jquery-file-upload-9.8.0/js/jquery.fileupload-validate.js")"></script>
         <!-- The main application script -->
-        <script src="@routes.Assets.at("js/libs/jquery-file-upload-9.8.0/js/main.js")"></script>
+        <script src="@routes.Assets.versioned("js/libs/jquery-file-upload-9.8.0/js/main.js")"></script>
