--- a/app/views/shared/hostImageCircle.scala.html
+++ b/app/views/shared/hostImageCircle.scala.html
@@ -1,4 +1,4 @@
-@(imagePath: String = routes.Assets.at("images/host/host-head-default-100x100.gif").url, cssClass: String = "", cssClassWrapper: String = "")
-@defining(if(imagePath.isEmpty) { routes.Assets.at("images/host/host-head-default-100x100.gif").url }else{ imagePath}){ imgP: String =>
+@(imagePath: String = routes.Assets.versioned("images/host/host-head-default-100x100.gif").url, cssClass: String = "", cssClassWrapper: String = "")
+@defining(if(imagePath.isEmpty) { routes.Assets.versioned("images/host/host-head-default-100x100.gif").url }else{ imagePath}){ imgP: String =>
     <div class="host-image @cssClassWrapper"><img src="@imgP" class="img-circle grayscale grayscale-fade @cssClass"></div>
 }
