Made more fields mandatory on profileEdit

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -298,12 +298,14 @@ input[type="password"]
 
 .tab-has-error, .tab-has-error a {
   color: @hdc-red !important;
+  background-color: @hdc-light-red !important;
   border-top-color: @hdc-medium-light-red !important;
   border-left-color: @hdc-medium-light-red !important;
   border-right-color: @hdc-medium-light-red !important;
 }
 input:invalid {
   border: 1px solid @hdc-red;
+  background-color: @hdc-light-red !important;
 }
 
 /*
