--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -909,7 +909,7 @@ input[type="reset"]:hover
   bottom: -1000%;
   margin: auto;
   min-height: 100%;
-  /*min-width: 100%;*/
+  min-width: 100%;
 }
 
 // Events
