--- a/app/views/event/event.scala.html
+++ b/app/views/event/event.scala.html
@@ -7,6 +7,7 @@
         eventBoxes: Option[List[models.viewmodels.EventBox]] = None,
         shareUrl: String = "",
         isThisMyEvent: Boolean = false,
+        isUserHost: Boolean,
         memberUser: Option[UserCredential] = None,
         eventLikeForm: play.twirl.api.Html = play.twirl.api.Html(""))(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie, messages: Messages)
 
@@ -14,9 +15,13 @@
 @eventScripts = {
     <script src="@routes.Assets.versioned("js/libs/twitter-bootstrap-wizard-1.0.0/jquery.bootstrap.wizard.min.js")"></script>
     <script src="@routes.Assets.versioned("js/app/event-helpers.js")"></script>
+    <script src="@routes.Assets.versioned("js/app/event-image-gallery.js")"></script>
+}
+@if(isUserHost) {
+    eventScripts += {
     <script src="@routes.Assets.versioned("js/app/event-booking.js")"></script>
     <script src="@routes.Assets.versioned("js/app/event-date-suggestion.js")"></script>
-    <script src="@routes.Assets.versioned("js/app/event-image-gallery.js")"></script>
+    }
 }
 
 @main(Messages("event.title", event.getName), metaData = metaData, footerScripts = eventScripts) {
@@ -45,10 +50,10 @@
 
         <div class="row bg-color">
             <div class="col-xs-12 col-md-4 margin-top">
-                @views.html.event.bookingDatePicker(event, isThisMyEvent)
-                @views.html.event.bookingForm(eventBookingForm, event.getMaxNrOfGuests, memberUser, isThisMyEvent)
-                @views.html.event.suggestionButton(event, memberUser, isThisMyEvent)
-                @views.html.event.suggestionForm(eventDateSuggestionForm, event.getMaxNrOfGuests, memberUser, isThisMyEvent)
+                @views.html.event.bookingDatePicker(event, isThisMyEvent, isUserHost)
+                @views.html.event.bookingForm(eventBookingForm, event.getMaxNrOfGuests, memberUser, isThisMyEvent, isUserHost)
+                @views.html.event.suggestionButton(event, memberUser, isThisMyEvent, isUserHost)
+                @views.html.event.suggestionForm(eventDateSuggestionForm, event.getMaxNrOfGuests, memberUser, isThisMyEvent, isUserHost)
 
                 @eventLikeForm
                 @shared.fbShare(shareUrl)
