Try to make the image selector more understandable

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1493,9 +1493,17 @@ input[type="reset"]:hover
   overflow: hidden;
   background-color: rgba(0,0,0,0.5);
 }
+.image-chooser .overlay-functions-header {
+  position: relative;
+  display: block;
+  color: @hdc-white;
+  font-weight: bold;
+  font-size:13px;
+  top:9%;
+}
 .image-chooser .btn-function {
   position: relative;
-  top:29%;
+  top:9%;
 }
 .image-chooser .btn-function:hover {
   cursor: pointer;
